--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
+
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contacts in vm.contacts">
+                    <h4>Contact Name <input ng-model="contact.name" /></h4>
+                    <h6>Phone Number <input ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
