--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <div ng-controller="ContactController as vm">
             <ul>
                 <li ng-repeat="contacts in vm.contacts">
-                    <h4>Contact Name <input ng-model="contact.name" /></h4>
-                    <h6>Phone Number <input ng-model="contact.phone" /></h6>
+                    <h4>Name: <input ng-model="contacts.name" /></h4>
+                    <p>Phone Number: <input ng-model="contacts.phone" /></p>
                 </li>
             </ul>
-            <button ng-click="vm.addContact()">Add Contact</button>
+            <button ng-click="vm.addContact()">Add Contact</button><br><br>
         </div>
     </div>
+
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
