--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Contact Name: {{contact.name}} </h4>
+                    <h6>Phone Number: {{contact.phone}}</h6>
                 </li>
             </ul>
+            <h2>Add a new contact:</h2>
+            Name: <input type="input" ng-model="name"><br>
+            Phone: <input type="input" ng-model="phone"><br>
+            <button ng-click="vm.addContact(name, phone)">Submit</button>
         </div>
     </div>
 
