--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
 
-    <div ng-app="app">
-        <div ng-controller="ContactController as vm">
-            <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
-                </li>
-            </ul>
-        </div>
+  <div ng-app="app">
+    <div ng-controller="ContactController as vm">
+      <ul>
+        <li ng-repeat='contact in vm.contacts'>
+          <h4>Contact Name: {{contact.name}} </h4>
+          <h6>Phone Number: {{contact.phone}}</h6>
+        </li>
+      </ul>
     </div>
+    <h2>Add a new contact:</h2>
+    Name: <input type="input" ng-model="name"><br>
+    Phone: <input type="input" ng-model="phone"><br>
+    <button ng-click="vm.addContact(name, phone)">Add Contact</button>
+  </div>
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
