--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
+                <li ng-repeat="contact in vm.contacts">
                     <h4>Contact Name</h4>
+                    <input ng-model="contact.name"></input>
                     <h6>Phone Number</h6>
+                    <input ng-model="contact.phone"></input>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
