--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
         <div ng-controller="ContactController as vm">
             <ul>
                 <li ng-repeat = 'contact in vm.contacts'>
-                    <h4>{{contact.name}}</h4>
-                    <h6>{{contact.phone}}</h6>
+                    <h4>Contact: <input ng-model = "contact.name"/></h4>
+                    <h6>Phone: <input ng-model = "contact.phone"/></h6>
                 </li>
             </ul>
             <div id = "newContact">
                 Name: <input ng-model = "vm.newName"/><br>
                 Phone: <input ng-model = "vm.newPhone"/><br>
                 <button ng-click = "vm.addContact()">Add Contact</button><br><br>
-            </div>
-            Edit Last Input Here
-            <div id = "editContact">
-                Name: <input ng-model = "vm.contacts[vm.contacts.length-1].name"/><br>
-                Phone: <input ng-model = "vm.contacts[vm.contacts.length-1].phone"/><br>
             </div>
         </div>
     </div>
