--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Contact Name:</h4>
+                    {{ contact.name }}<br>
+                    <h6>Phone Number:</h6>
+                    {{ contact.phone }}<br>
                 </li>
             </ul>
+            <input ng-model="vm.name" ng-bind="name"/><br>
+            <input ng-model="vm.phone" ng-bind="phone" /><br>
+            <button ng-click="vm.addContact()" /><br>
         </div>
     </div>
 
