--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> 
 <html>
 <head>
     <meta charset="utf-8">
@@ -11,11 +11,13 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4><input ng-model="contact.name" /></h4>
+                    <h6><input ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
