--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 </li>
             </ul>
-            <button ng-click="vm.contacts.addContact()">Add Contact</button>
+            <button ng-click="vm.addContact()">Add Contact</button>
                 
             </input>
         </div>
