--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h4><input type="text" ng-model="contact.name"></h4>
+                    <h6> {{ contact.phone }}</h6>
+                    <h6><input type="text" ng-model="contact.phone"></h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact!</button>
         </div>
+        
     </div>
 
     <script src="js/angular.js"></script>
