--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <input ng-model="contact.phone">
                 </li>
             </ul>
-            <button ng-click="addContact()">Add Contact</button>
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
