--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 <body>
 
     <div ng-app="app">
-        <div ng-controller="ContactController as vm">
-            <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
-                </li>
-            </ul>
-        </div>
+      <div ng-controller="ContactController as vm">
+          <ul>
+            <li ng-repeat="contact in vm.contacts">
+              <h4>Name: <input ng-model="contact.name" /> {{contact.name}}</h4>
+              <h6>Phone: <input ng-model="contact.phone" /> {{contact.phone}}</h6>
+            </li>
+          </ul>
+          <input ng-model="vm.name" type=text placeholder="Name" /> <br>
+          <input ng-model="vm.phone" type=text placeholder="Phone"/> <br>
+          <button ng-click="vm.addContact()">Add Contact</button>
+      </div>
+
+
     </div>
+
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
