--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Contact Name: {{ contact.name }}</h4>
+                    <h6>Phone Number: {{ contact.phone }}</h6>
                 </li>
             </ul>
+        <input ng-model="vm.contact.name" />
+        <input ng-model="vm.contact.phone" />
+            The name is {{ vm.contact.name }} <br />
+            The phone is {{ vm.contact.phone }}
         </div>
     </div>
 
