--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
 
-    <div ng-app="app">
-        <div ng-controller="ContactController as vm">
-            <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
-                </li>
-            </ul>
-        </div>
+  <div ng-app="app">
+    <div ng-controller="ContactController as vm">
+      <button ng-click="vm.addContact()">Add Contact</button>
+      <ul>
+        <li ng-repeat="contact in vm.contacts">
+          <h4><input ng-model="contact.name" /></h4>
+          <h6><input ng-model="contact.phone" /></h6>
+        </li>
+      </ul>
     </div>
+  </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/ContactController.js"></script>
+  <script src="js/angular.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/ContactController.js"></script>
 
 </body>
 </html>
