--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-            <ul>
+            <ul ng-repeat="contact in vm.contacts">
                 <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                    <h4>Name <index ng-model="contact.name" /></h4>
+                    <h6>Phone Number <index ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+            <button ng-click="vm.addCotact()">Add Contact </button>
         </div>
     </div>
 
