--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-            <ul>
+            <ul ng-repeat="contact in vm.contacts">
                 <li>
                     <h4>Contact Name</h4>
+                     <input ng-model="contact.name" />
                     <h6>Phone Number</h6>
+                     <input ng-model="contact.phone" />
                 </li>
             </ul>
+            <button ng-click="vm.addContact();">Add Contact</button>
         </div>
     </div>
 
