--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                     <h6>Phone Number</h6>
                 </li>
             </ul>
+
+            <li ng-repeat="contact in vm.contacts">
+                <p><input ng-model="contact.name" /></p>
+                <p><input ng-model="contact.phone" /></p>
+            </li>
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
