--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
+                    <input ng-model="vm.contact.name" />
+                    <input ng-model="vm.contact.phone" />
+                    Name: {{ vm.contact.name }} <br />
+                    Phone: {{ vm.contact.phone }}
                 </li>
             </ul>
+
         </div>
     </div>
-
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/ContactController.js"></script>
