--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
+                <li ng-repeat="contact in vm.contacts">
                     <h4>Contact Name</h4>
+                        <p>{{contact.name}}</p>
                     <h6>Phone Number</h6>
+                      <p>{{contact.phone}}</p>
                 </li>
             </ul>
+            <input ng-model="vm.name" ><br>
+            <input ng-model="vm.phone" ><br>
+            <button ng-click="vm.addContact()">Add New Contact</button>
         </div>
     </div>
 
