--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
+
+            <button ng-click="vm.addContact()">Add Contact</button>
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                  <input ng-model="contact.name" />
+                  <input ng-model="contact.phone" />
                 </li>
             </ul>
         </div>
