--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <input ng-model="contact.name" placeholder="contact.name" /> <br />
+                    <input ng-model="contact.phone" placeholder="contact.phone" /> <br />
+                    <h4>{{contact.name}}</h4>
+                    <h6>{{contact.phone}}</h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()"></button>
         </div>
     </div>
 
