--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Contact Name {{contact.name}}</h4>
+                    <h6>Phone Number {{contact.phone}}</h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact</button>
+
+            <input ng-model="vm.name" placeholder="name" />
+            <input ng-model="vm.phone" placeholder="phone"/>
+
+            The new name is {{vm.name}}. The new phone number is {{vm.phone}}
         </div>
     </div>
 
