use ng-click to add event based directive to add contact

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <h6>Phone Number: {{ contact.phone }}</h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
