--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
+
+                    <p>Name: <input ng-model="contact.name"></p>
+                    <p>Phone: <input ng-model="contact.phone"></p>
                 </li>
             </ul>
+
+            <button type="submit" ng-click="vm.addContact()">Add Contact</button>
+            
         </div>
     </div>
 
