--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                     </h6>
                 </li>
             </ul>
+            <hr>
+            <h4>Want to add a new contact?</h4>
+            <input type="text" ng-model="vm.newName">
+            <input type="text" ng-model="vm.newPhone">
+            <br/>
             <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
