--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
+
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{contact.name}}</h4>
+                    <h6>{{contact.phone}}</h6>
+
+                    <input ng-model="vm.name" />
+            <input ng-model="vm.phone" />
+            <button ng-click="vm.addContact()">Add Contact</button>
+
+
                 </li>
             </ul>
+
         </div>
     </div>
 
