--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Name: <input ng-model="contact.name" /></h4>
+                    <p> {{ contact.name }}</p>
+
+                    <h6>Phone: <input ng-model="contact.phone" /></h6>
+                    <p> {{ contact.name }}</p>
                 </li>
             </ul>
+              <button ng-click="vm.addContact()"> Add Contact Button </button>
         </div>
     </div>
 
