--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-    <div ng-app="app">
+    <div ng-app="app" class="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Name: <input ng-model="contact.name" /></h4>
+                    <h6>Phone: <input ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+
+            <button class="button" ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
