--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
+            <button ng-click="vm.addContact()">Add</button>
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h4>{{ contact.phone }}</h4>
                 </li>
             </ul>
         </div>
