--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-            <button ng-click="vm.addContact()">Add</button>
             <ul>
                 <li ng-repeat="contact in vm.contacts">
-                    <h4>{{ contact.name }}</h4>
-                    <h4>{{ contact.phone }}</h4>
+                    <h4>Name: <input ng-model='contact.name' /></h4>
+                    <h6>Phone: <input ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+            
+            <button ng-click='vm.addContact()'>Add Contact</button>
         </div>
     </div>
 
