--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Name: {{contact.name}}</h4>
+                    <h6>Phone: {{contact.phone}}</h6>
                 </li>
             </ul>
+            <input ng-model="newContact.name" />
+            <input ng-model="newContact.phone" />
+            <button ng-click="vm.addContact(newContact.name, newContact.phone)">Yo</button>   
         </div>
     </div>
 
