--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div ng-controller="ContactController as vm">
             <ul>
                 <li ng-repeat="contact in vm.contacts">
-                    <h4>{{ contact.name }}</h4>
-                    <h6>{{ contact.phone }}</h6>
+                    <input ng-model="contact.name" />
+                    <input ng-model="contact.phone" />
                 </li>
             </ul>
             <button ng-click="vm.addContact()">Add Contact</button>
