--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{contact.name}}</h4>
+                    <h6>{{contact.phone}}</h6>
                 </li>
             </ul>
+            <input type="text" name="name" ng-model="vm.name"></input><br>
+            <input type="text" name="phone" ng-model="vm.phone"></input><br>
+            <button type="button" ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
