--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    Name: <input ng-model="contact.name"></input><br>
+                    Number: <input ng-model="contact.phone"></input><br>
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add contact</button>
         </div>
     </div>
 
