--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-            <ul ng-repeat="contact in vm.contacts">
-                <li>
+            <ul >
+                <li ng-repeat="contact in vm.contacts">
                     <h4>Contact Name {{ contact.name }}</h4>
                     <h6>Phone Number {{ contact.phone }}</h6>
                 </li>
             </ul>
+            <input ng-model="vm.contacts.name" placeholder="Contact Name" /> <br />
+            <input ng-model="vm.contacts.phone" placeholder="Phone Number" /> <br />
+            <button ng-click="vm.addContact(vm.contacts.name, vm.contacts.phone)">Add Contact</button>
         </div>
     </div>
 
