--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
+                <li ng-repeat="contact in vm.contacts">
                     <h4>Contact Name</h4>
+                    <input ng-model="contact.name" }} <br>
                     <h6>Phone Number</h6>
+                    <input ng-model="contact.phone" }} <br>
                 </li>
             </ul>
         </div>
     </div>
+
+    <button ng-click="vm.addContact()">Add Contact</button>
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
