--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
-                </li>
+    
+                    <li ng-repeat="contact in vm.contacts">
+                        <h4>Name: <input placeholder="Contact Name" ng-model= "contact.name"></h4>
+                        <h6>Phone: <input placeholder="Contact Phone" ng-model= "contact.phone"></h6>
+                    </li>
             </ul>
+        
+             <button ng-click="addContact()">Add Contact</button>
         </div>
     </div>
 
