--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
+          <input ng-model="vm.contact.name"><br>
+          <input ng-model="vm.contact.phone"><br>
+          <button ng-click="vm.addContact()">Add Contact</button>
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>{{ contact.name }}</h4>
+                    <h6>{{ contact.phone }}</h6>
                 </li>
             </ul>
         </div>
