--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
-          <input ng-model="vm.contact.name"><br>
-          <input ng-model="vm.contact.phone"><br>
-          <button ng-click="vm.addContact()">Add Contact</button>
             <ul>
                 <li ng-repeat="contact in vm.contacts">
-                    <h4>{{ contact.name }}</h4>
-                    <h6>{{ contact.phone }}</h6>
+                    <h4><input placeholder="Name" ng-model="contact.name" /></h4>
+                    <h6><input placeholder="Phone number" ng-model="contact.phone" /></h6>
                 </li>
             </ul>
+
+            <button ng-click="vm.addContact()">Add Contact</button>
         </div>
     </div>
 
