--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div ng-app="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
-                    <h4>Contact Name</h4>
-                    <h6>Phone Number</h6>
+                <li ng-repeat="contact in vm.contacts">
+                    <h4>Contact Name - <input ng-model="contact.name"></input></h4>
+                    <h6>Phone Number - <input ng-model="contact.phone"></input></h6>
                 </li>
             </ul>
+            <button ng-click="vm.addContact()">Add</button>
         </div>
     </div>
 
